opam-version: "1.2"
maintainer: "self@brendanlong.com"
homepage: "https://github.com/brendanlong/sentry-ocaml"
dev-repo: "https://github.com/brendanlong/sentry-ocaml.git"
bug-reports: "https://github.com/brendanlong/sentry-ocaml/issues"

build: ["jbuilder" "build" "-p" name "-j" jobs]
build-test: ["jbuilder" "runtest" "-p" name "-j" jobs]

depends: [
  "async" {>= "v0.10"}
  "atdgen"
  "cohttp-async" {>= "1.0.2"}
  "core" {>= "v0.10"}
  "hex" {>= "1.2.0"}
  "json-derivers"
  "re2"
  "sexplib" {>= "v0.10"}
  "uuidm"
  "uri" {>= "2.0.0"}

  "ppx_jane" {build}
  "bisect_ppx" {build & >= "1.3.1"}
  "jbuilder" {build & >= "1.0+beta18"}

  "ounit" {test}
]

available: [ocaml-version >= "4.05.0"]
