opam-version: "1.2"
maintainer: "self@brendanlong.com"
homepage: "https://github.com/brendanlong/sentry-ocaml"
dev-repo: "https://github.com/brendanlong/sentry-ocaml.git"
bug-reports: "https://github.com/brendanlong/sentry-ocaml/issues"

build: ["dune" "build" "-p" name "-j" jobs]
build-test: ["dune" "runtest" "-p" name "-j" jobs]

depends: [
  "async" {>= "v0.10"}
  "atdgen"
  "cohttp" {< "2.0.0"}
  "cohttp-async" {>= "1.0.2" & < "2.0.0"}
  "core" {>= "v0.10"}
  "hex" {>= "1.2.0"}
  "json-derivers"
  "re2"
  "sexplib" {>= "v0.10"}
  "uuidm"
  "uri"
  "yojson" {<= "1.5.0"}

  "dune" {build & >= "1.4.0"}
  "ppx_jane" {build}
  "bisect_ppx" {build & >= "1.3.1"}

  "ounit" {test}
]

available: [ocaml-version >= "4.05.0"]
