opam-version: "2.0"
maintainer: "Brendan Long <self@brendanlong.com>"
authors: "Brendan Long <self@brendanlong.com>"
homepage: "https://github.com/brendanlong/sentry-ocaml"
dev-repo: "git+https://github.com/brendanlong/sentry-ocaml.git"
bug-reports: "https://github.com/brendanlong/sentry-ocaml/issues"

build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]

depends: [
  "async" {>= "v0.10"}
  "atdgen"
  "cohttp" {>= "2.0.0"}
  "cohttp-async" {>= "2.0.0"}
  "core" {>= "v0.10"}
  "hex" {>= "1.2.0"}
  "json-derivers"
  "ocaml" {>= "4.05.0"}
  "re2"
  "sexplib" {>= "v0.10"}
  "uuidm"
  "uri"
  "yojson"

  "dune" {build & >= "1.4.0"}
  "ppx_jane" {build}
  "bisect_ppx" {build & >= "1.3.1"}

  "ounit" {test}
]
