(* -*- tuareg -*- *)

let preprocess =
  match Sys.getenv "BISECT_ENABLE" with
  | "yes" -> "bisect_ppx --exclusions src/.exclude"
  | _ -> ""
  | exception Not_found -> ""

let () = Jbuild_plugin.V1.send @@ {|

(env
 (dev
  (flags
   (:standard -w -3)))
 (release
  (flags
   (:standard -w -3))))

(library
 (public_name sentry)
 (libraries async_kernel atdgen cohttp-async core_kernel hex json-derivers
   uri uuidm re2 yojson)
 (inline_tests
  (flags (-verbose)))
 (preprocess
  (pps ppx_jane |} ^ preprocess ^ {|))
 (preprocessor_deps .exclude))

(rule
 (targets payloads_j.ml payloads_j.mli)
 (deps payloads.atd)
 (action
  (run atdgen -j -j-std payloads.atd)))

(rule
 (targets payloads_t.ml payloads_t.mli)
 (deps payloads.atd)
 (action
  (run atdgen -t -j-std payloads.atd)))

|}
